--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/sequelize": "^4.28.20",
-    "@types/winston": "^2.4.4",
     "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
@@ -44,13 +43,13 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
+    "sanitize-html": "^2.13.1",
     "sequelize": "^6.37.4",
     "sequelize-typescript": "^2.1.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.15.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "xss-clean": "^0.1.4"
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -62,6 +61,7 @@
     "@types/multer-s3": "^3.0.3",
     "@types/node": "^22.7.9",
     "@types/otp-generator": "^4.0.2",
+    "@types/sanitize-html": "^2.13.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "nodemon": "^3.1.7",
     "sequelize-cli": "^6.6.2",
